<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">B-Tnsy</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_section1">Welcome!</string>
    <string name="title_section2">Command</string>
    <string name="title_section3">Receive</string>
    <string name="title_paired_devices">Paired Bluetooth Devices</string>
    <string name="title_other_devices">Other Bluetooth Devices</string>
    <string name="title_connecting">Connecting...</string>
    <string name="title_connected_to">Connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">Not connected</string>
    <string name="title_activity_about">B-tnsy About</string>
    <string name="btn_scan">Scan for devices</string>
    <string name="action_connect">Connect to a bluetooth device</string>
    <string name="action_connect_ok">Connected</string>
    <string name="action_enable_bt">Enable bluetooth</string>
    <string name="action_enable_bt_ok">Bt Enabled</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="toast_txt_no_settings">There are no customizable settings yet</string>
    <string name="toast_bt_already_enabled">Bluetooth already enabled!</string>
    <string name="toast_bt_already_paired">Bluetooth already paired!</string>
    <string name="toast_bt_enable_first">Please enable bluetooth first.</string>
    <string name="toast_bt_cant_pair">Connecting was not possible, try 
	    another device, or make sure an already paired device is near.</string>
    <string name="txt_none_paired">No devices previously paired.</string>
    <string name="txt_scanning">Scanning for devices</string>
    <string name="txt_none_found">No devices were found.</string>
    <string name="txt_bluetooth_not_exist">This device doesn\'t support bluetooth.</string>
    <string name="txt_bluetooth_exists">This device supports bluetooth.</string>
    <string name="txt_bluetooth_necessary">Bluetooth is necessary for this 
        application to run.</string>
    <string name="txt_about">This application was made by ivanbaug \n\n
			
			Creative commons for some of the icons and images:\n\n
			\t-Designer: VisualPharm\n
			\t\t<b><a href="http://www.visualpharm.com">						http://www.visualpharm.com/</a></b>\n
			\t-Designer: Pixel Mixer\n
			\t\t<b><a href="http://www.pixel-mixer.com/">						http://www.pixel-mixer.com/</a></b>\n\n
			Others were made by myself	</string>
	<string name="txt_welcome_add">To use this app you should connect it to a
	    bluetooth device:</string>
	<string name="txt_welcome_enable">If you haven\'t enabled bluetooth yet
	    use the button that looks like:</string>
	<string name="txt_welcome_reminder"><b>Remember to use the buttons that are at the top,
	    near the name of the app</b></string>
    <string name="select_device">Select a device</string>

</resources>
