<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ivanotes.b_tnsy.MainActivity" >
	<item
        android:id="@+id/action_connect"
        android:icon="@android:drawable/ic_input_add"
        android:orderInCategory="100"
        android:title="@string/action_connect"
        app:showAsAction="ifRoom|withText"/>
	<item
        android:id="@+id/action_enable_bt"
        android:icon="@android:drawable/stat_sys_data_bluetooth"
        android:orderInCategory="200"
        android:title="@string/action_enable_bt"
        app:showAsAction="ifRoom|withText"/>
	<item 
        android:id="@+id/action_about"
        android:orderInCategory="300"
        android:title="@string/action_about"
        app:showAsAction="never"
        />

</menu>
