<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ivanotes.b_tnsy.TabCommand" >

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout 
        android:id="@+id/contains_instructions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="96dp"       >
        
        <ImageView
	        android:id="@+id/im_arrow"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:layout_alignParentRight="true"
	        android:layout_marginRight="20dp"
	        android:src="@drawable/im_arrow_up"
	        android:padding="5dip" />
        <LinearLayout 
		    android:id="@+id/brief_instructions"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="30dp"
		    android:layout_toLeftOf="@+id/im_arrow"
		    android:layout_centerVertical="true"
		    android:gravity="center"
		    android:orientation="vertical"
		    android:background="@drawable/bg_txt_gray_o"
    		android:padding="10dip"  >
		    
			    <TextView
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:textSize="16sp"
			        android:textColor="#000000"
			        android:text="@string/txt_welcome_add" />
				<ImageView
			        android:layout_width="40dp"
			        android:layout_height="40dp"
			        android:background="#64000000"
			        android:src="@android:drawable/ic_input_add" />				
			    <TextView
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:textSize="16sp"
			        android:textColor="#000000"
			        android:text="@string/txt_welcome_enable" />  
			    <ImageView
			        android:layout_width="40dp"
			        android:layout_height="40dp"
			        android:background="#64000000"
			        android:src="@android:drawable/stat_sys_data_bluetooth" />
			    <TextView
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:textColor="#000000"
			        android:text="@string/txt_welcome_reminder" />           
        </LinearLayout>
    </RelativeLayout>
	
    
    

</RelativeLayout>
